# resultpipes

./: .gitignore  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: codeql.yml
src/resultpipes/: __init__.py  catch.py  pipe.py  result.py
tests/: test_catch.py  test_init.py  test_pipe.py  test_result.py
